--- a/frontend/src/components/Volunteer_stories.module.css
+++ b/frontend/src/components/Volunteer_stories.module.css
@@ -1,5 +1,3 @@
-
-
 .stories{
     height: 21rem;
     width: 11rem;
@@ -9,26 +7,11 @@
     cursor: pointer;
 }
 
-@media (min-width: 501px) and (max-width: 890px) {
-    .stories{
-        height: 19rem;
-        width: 9.65rem;
-    }
-  }
-
-@media all and (max-width: 500px) {
-    .stories{
-        height: 18.65rem;
-        width: 9.15rem;
-    }
-  }
-
 .stories:hover{
     transition: ease-in-out 0.4s;
     transform: scale(1.05);
 }
   
-
 .image{
     height: 7rem;
     width: 7rem;
@@ -40,6 +23,25 @@
     margin-bottom: 0.5rem;
 }
 
+.story{
+    font-weight: 600;
+    margin-top: 1rem;
+}
+
+.name{
+    color: #3066be;
+    font-weight: 600;
+    margin-top: 1rem;
+}
+
+  /* css for width between 501px to 890px i.e, for tablets*/
+@media (min-width: 501px) and (max-width: 890px) {
+    .stories{
+        height: 19rem;
+        width: 9.65rem;
+    }
+  }
+
 @media (min-width: 501px) and (max-width: 890px) {
     .image{
         height: 6.25rem;
@@ -49,7 +51,28 @@
     }
   }
 
+@media (min-width: 501px) and (max-width: 890px) {
+    .story{
+        margin-top: 0.7rem;
+    }
+  }
+
+@media (min-width: 501px) and (max-width: 890px) {
+    .name{
+        margin-top: 0.7rem;
+    }
+  }
+
+  /* css for width upto 500px i.e, for mobiles*/
+
   @media all and (max-width: 500px) {
+    .stories{
+        height: 18.65rem;
+        width: 9.15rem;
+    }
+  }
+
+@media all and (max-width: 500px) {
     .image{
         height: 5.7rem;
         width: 5.7rem;
@@ -58,37 +81,13 @@
     }
   }
 
-
-.story{
-    font-weight: 600;
-    margin-top: 1rem;
-}
-
-@media (min-width: 501px) and (max-width: 890px) {
-    .story{
-        margin-top: 0.7rem;
-    }
-  }
-
-  @media all and (max-width: 500px) {
+@media all and (max-width: 500px) {
     .story{
         margin-top: 0.35rem;
     }
   }
 
-.name{
-    color: #3066be;
-    font-weight: 600;
-    margin-top: 1rem;
-}
-
-@media (min-width: 501px) and (max-width: 890px) {
-    .name{
-        margin-top: 0.7rem;
-    }
-  }
-
-  @media all and (max-width: 500px) {
+@media all and (max-width: 500px) {
     .name{
         margin-top: 0.35rem;
     }
