--- a/frontend/src/pages/home.module.css
+++ b/frontend/src/pages/home.module.css
@@ -150,12 +150,13 @@
 .learn_more_button{
     display: block;
     margin: auto;
-    height: 2rem;
-    width: 6rem;
-    border-radius: 0.45rem;
+    height: 2.8rem;
+    width: 7rem;
+    border-radius: 0.6rem;
     border: none;
     background-color: white;
     margin-top: 2rem;
+    font-size: 1.05rem;
 }
 
 .learn_more_button:hover{
@@ -178,15 +179,16 @@
 
 .image_outline{
     height: 299px;
-    width: 37.5vw;
+    width: 32.5vw;
     background-color: #3066be;
     rotate: z -10deg;
     border-radius: 35px;
+    margin-left: 7rem;
 }
 
 .image_link{
     height: 260px;
-    width: 35vw;
+    width: 30vw;
     margin-right: 10px;
     margin-left: 15px;
     border: 10px solid white;
@@ -314,6 +316,8 @@
 @media all and (max-width: 500px) {
     .learn_more_button{
         margin-top: 1rem;
+        height: 3rem;
+        width: 7rem;
     }
   }
 
