--- a/frontend/src/pages/home.module.css
+++ b/frontend/src/pages/home.module.css
@@ -25,6 +25,20 @@
     font-size: 3.5rem;
 }
 
+.title {
+    opacity: 0;
+    animation: fadeIn 1s 1s ease-in forwards;
+  }
+  
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
 .title2{
     text-align: center;
     font-weight: 700;
@@ -33,15 +47,60 @@
     margin-right: auto;
 }
 
+.title2 {
+    opacity: 0;
+    animation: fadeIn 1s 1.5s ease-in forwards;
+  }
+  
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+
 .club_logo{
     height: 550px;
     width: 600px;
 }
 
+.club_logo {
+    opacity: 0;
+    animation: fadeIn 1s 0.5s ease-in forwards;
+  }
+  
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+
 .buttons{
     margin-top: 0.5rem;
 
 }
+
+.buttons {
+    opacity: 0;
+    animation: fadeIn 1s 2s ease-in forwards;
+  }
+  
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
 
 .button_1{
     height: 2.5rem;
